# eanima-backend

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
app/auth/: api.py  cryptography.py  hash.py  utils.py
app/authorizarions/: models.py
app/users/: api.py  models.py  schema.py  schemas.py  utils.py
app/users/customers/: api.py  models.py  schemas.py
app/users/employees/: api.py  models.py  schemas.py
app/users/providers/: api.py  models.py  schema.py  schemas.py
config/: crud.py  database.py
core/auth/: api.py  cryptography.py  deps.py  utils.py
dashboard/: app.py
dashboard/categories/: api.py  crud.py  models.py  schemas.py
dashboard/stores/: models.py
dashboard/users/: api.py  models.py  schemas.py
dashboard/users/customers/: api.py  models.py  schemas.py
dashboard/users/employees/: api.py  models.py  schemas.py
dashboard/users/providers/: api.py  models.py  schemas.py
tests/: database.py
