[tool.poetry]
name = "eanima-backend"
version = "0.1.0"
description = ""
authors = ["Marcelo Livramento <molivramento@gmail.com>"]
readme = "README.md"
packages = [{include = "eanima_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
