[tool.poetry]
name = "eanima-backend"
version = "0.1.0"
description = ""
authors = ["Marcelo Livramento <molivramento@gmail.com>"]
readme = "README.md"
packages = [{include = "eanima_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
python-decouple = "^3.7"
ormar = {extras = ["postgres"], version = "^0.12.1"}


[tool.poetry.group.dev.dependencies]
ormar = {extras = ["sqlite"], version = "^0.12.1"}
pytest = "^7.2.1"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
